--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port=8080
 
+#mysql
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://localhost:3306/rabbitmqdemo?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#mybatis
+mybatis.mapper-locations=classpath:mapping/*.xml
+mybatis.type-aliases-package=com.rabbitmqdemo.rabbitmqdemo.PO
+mybatis.configuration.call-setters-on-nulls=true
