--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
             <version>2.9.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>3.6.5</version>
+        </dependency>
     </dependencies>
 
     <build>
