--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.mapper-locations=classpath:mapping/*.xml
 mybatis.type-aliases-package=com.rabbitmqdemo.rabbitmqdemo.PO
 mybatis.configuration.call-setters-on-nulls=true
+
+#RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.port=5672
+
+#页面默认前缀目录
+spring.mvc.view.prefix=/WEB-INF/jsp/
+#页面默认后缀目录
+spring.mvc.view.suffix=.jsp
