学习了新内容

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,12 @@ spring.rabbitmq.port=5672
 spring.mvc.view.prefix=/WEB-INF/jsp/
 #页面默认后缀目录
 spring.mvc.view.suffix=.jsp
+
+# thymeleaf
+spring.thymeleaf.prefix=classpath:/WEB-INF/jsp/
+spring.thymeleaf.suffix=.jsp
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html
+# 开发阶段务必关闭缓存 (=false)
+spring.thymeleaf.cache=false
